<resources>
    <string name="app_name">Perro Estilo Movil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admininstrador</string>
    <string name="nav_header_subtitle">Hola Rousse!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_etiquetas">Etiquetas</string>
    <string name="menu_modelos">Modelos</string>
    <string name="menu_tallas">Tallas</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_kit">MATCHS</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_envios">Envios</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="pe">PERRO ESTILO</string>
    <string name="pe1">Perro estilo</string>
    <string name="slogan">ACCESORIOS PARA TI Y TU MASCOTA</string>
    <string name="txtBienvenida">Bienvenido</string>
    <string name="txtInicioSession">Iniciar sesión</string>
    <string name="txtRegistro">Registrar</string>
    <string name="txtOlvidasteContras">¿Olvidaste tu contraseña?</string>
    <string name="txtAunNoTienesCuenta">¿Aún no tienes cuenta?</string>
    <string name="txtCrearCuenta">Crea una</string>
    <string name="txtIngreseUsuario">Ingrese el usuario o email</string>
    <string name="txtIngreseEmail">Correo electronico</string>
    <string name="txtIngreseContrasena">Ingrese la contraseña</string>
    <string name="txtNuevaCuenta">Nueva cuenta</string>
    <string name="txtYaTienesCuenta">¿Ya tienes cuenta?</string>
    <string name="txtIniciaSesion">Inicia sessión</string>
    <string name="txtRegistrate">Registrate</string>
    <string name="txtNombreUsuario">Nombre</string>
    <string name="txtApellidoUsuario">Apellido</string>
    <string name="txtConfirmeContrasena">Confirme la contraseña</string>
    <string name="txtTerminosYcondiciones">He leído y acepto los Terminos y Condiciones de uso</string>
    <string name="correo">Correo electrónico: </string>
    <string name="password">Contraseña: </string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="re_pass">¿Olvidaste tu contraseña? </string>
    <string name="facebook">Ingresar con facebook</string>
    <string name="google">Ingresar con google </string>
    <string name="contexto">contextoimagenes</string>
    <string name="registrar">Crear cuenta </string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">E-mail </string>
    <string name="telefono">Celular </string>
    <string name="r_pass">Contraseña</string>
    <string name="conf_pass">Confirmar contraseña </string>
    <string name="terminos">Aceptarpoliticas de privacidad.
                            Terminos y condiciones de uso.</string>
    <string name="registrarme">Registrarme </string>
    <string name="r_google">Registrarme con google</string>
    <string name="r_facebook">Registrarme con facebook</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="forma">Como desea recuperar su contraseña</string>
    <string name="enviar_codigo">Enviaremos un código a tu correo electrónico o número registrado</string>
    <string name="f_correo">Mandamos un codigo a tu correo eléctrónico</string>
    <string name="f_telefono">Mandamos un codigo a tu teléfono celular</string>
    <string name="codigo">Ingrese el codigo</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="aceptar">Aceptar</string>
    <string name="enviarx2">Volver a enviar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_inicio_cliente">Inicio</string>
    <string name="title_tienda_cliente">Tienda</string>
    <string name="title_carrito_cliente">Carrito</string>
    <string name="title_cuenta_cliente">Cuenta</string>
    <string name="title_kits_cliente">KITS</string>
    <string name="txtDescImg">Descripcion de la imagen</string>
    <string name="txtDerechos">Copyright&#169; Todos los derechos reservados | Perro Estilo &amp;2021</string>
    <string name="txtCategorias">Categorías</string>
    <string name="txtProductos">Productos</string>
    <string name="txtNombreProducto">Nombre del producto</string>
    <string name="txtPrecio">$$$  </string>
    <string name="txtNuestraGaleri">Nuestra galeria</string>
    <string name="txtMejoresComentarios">Los mejores comentarios</string>
    <string name="txtUser">User</string>
    <string name="txtLorem">LoremIm asdjgdfjhskfhkshdf lahfkjsdhfldsjfkdfdslfhkjsgh
    dskjfhdskjfhksghkshgs</string>
    <string name="txtLicencias">Licencias</string>
    <string name="txtParaTi">Para ti    </string>
    <string name="txtOfertas">Ofertas</string>
    <string name="txtModa">Moda</string>
    <string name="txtKITS">KITS</string>
    <string name="txtProductosNuevos">Productos nuevos</string>
    <string name="txtTodasCategorias">Todas las categorias</string>
    <string name="txtDescuento">Descuento %</string>
    <string name="txtVerMas">Ver más...</string>
    <string name="txtNuevo">Nuevo</string>
    <string name="txtTemporada">Temporada</string>
    <string name="txtCategoriaPadre">Cateogoria Padre</string>
    <string name="txtVerTodasCategorias">Ver todas las categorias...</string>
    <string name="txtVerTodosKits">Ver todos los kits... </string>
    <string name="txtCategoria1">Categoria 1</string>
    <string name="txtRaiting">Raiting </string>
    <string name="txtEscogerTalla">Talla:</string>
    <string name="txtCantidad">Cantidad:</string>
    <string name="txtUno">1</string>
    <string name="txtNombreDelProducto">Nombre del prodcuto</string>
    <string name="txtComprarAhora">Comprar ahora</string>
    <string name="txtAgregarCarrito">Añadir al carrito</string>
    <string name="txtDetallesProducto">Detalles del producto</string>
    <string name="txtMedidas">Medidas</string>
    <string name="txtModelo">Modelo</string>
    <string name="txtMarca">Marca</string>
    <string name="txtDescripcion">Descripcion</string>
    <string name="txtPreguntar">Preguntar</string>
    <string name="txtProductosRelacionados">Productos relacionados</string>
    <string name="txtTotal">Total:</string>
    <string name="txtTotalAPagar">Total a pagar:</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtVerDetalle">Ver detalle</string>
    <string name="txtEditar">Editar</string>
    <string name="txtQuitar">Quitar</string>
    <string name="txtContinuarComprando">Continuar comprando</string>
    <string name="txtConfirmarCompra">Confirmar compra</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtMiCarrito">Mi carrito</string>
    <string name="txtVerCarrito">Ver carrito</string>
    <string name="txtContacto">Contacto</string>
    <string name="txtDireccionEntrega">Direccion de entrega: </string>
    <string name="txtNombreContacto">Nombre(s) </string>
    <string name="txtAppPContacto">Apellido paterno </string>
    <string name="txtAppMContacto">Apellido materno </string>
    <string name="txtTelContacto">Telefono</string>
    <string name="txtEditarContacto">Editar contacto</string>
    <string name="txtAgregarDireccion">Agregar direccion</string>
    <string name="txtAgregarOtraDireccion">Agregar otra direccion</string>
    <string name="txtEstado">Estado</string>
    <string name="txtMunicipio">Municipio</string>
    <string name="txtLocalidad">Localidad</string>
    <string name="txtCodigoPostal">Codigo postal</string>
    <string name="txtCalleExterior">Calle y número exterior</string>
    <string name="txtCalleInterior">Calle y número interior</string>
    <string name="txtReferencias">Referencias</string>
    <string name="txtLongitud">Longitud</string>
    <string name="txtLatitud">Latitud</string>
    <string name="txtAgregar">Agregar</string>
    <string name="txtInstrucciones">Instrucciones</string>
    <string name="txtEnviarPedidoWhats">Enviar pedido por WhatsApp</string>
    <string name="txtTicketCompra">Ver ticket compra</string>
    <string name="txtGraciasPorSuCompra">Gracias por su compra</string>
    <string name="txtOrden">Orden</string>
    <string name="txtNumeral">#####</string>
    <string name="txtNoSerie">No. Serie</string>
    <string name="txtClave">AAAA-4321234</string>
    <string name="txtDetalleCompra">Detalle de compra</string>
    <string name="txtDetalleEntrega">Detalle de entrega</string>
    <string name="txtEstimadoPara">Estimado para el ## de ## de ####</string>
    <string name="txtVerEnMisPedidos">Ver en mis pedidos</string>
    <string name="txtImportarTicket">Importar Ticket</string>
    <string name="txtFechaCompra">Fecha de compra</string>
    <string name="txtEstatusPedido">Estatus del pedido</string>
    <string name="txtEstatusProcesando">Procesando</string>
    <string name="txtEstatusPendiente">Pendiente</string>
    <string name="txtEstatusEntregado">Entregado</string>
    <string name="txtEstatusEnCamino">En camino</string>
    <string name="txtRecogidoEl">Recogido el 31 de octrubre</string>
    <string name="txtCalificar">Calificar</string>
    <string name="txtCerrar">Cerrar</string>
    <string name="txtNombreUser">Nombre de usuario</string>
    <string name="txtCuenta">Cuenta</string>
    <string name="txtCorreoUser">correo del usuario</string>
    <string name="txtMisDirecciones">Mis direcciones</string>
    <string name="txtMisPedidos">Mis pedidos</string>
    <string name="txtAyuda">Ayuda</string>
    <string name="txtAcercaDeNosotros">Acerca de nosotros</string>
    <string name="txtAcercaDeAplicacion">Acerca de la aplicación</string>
    <string name="txtCondicionesYTerminos">Condiciones y política de privacidad</string>
    <string name="txtAjustes">Ajustes y configuraciones</string>
    <string name="txtCerrarSessiom">Cerrar sesión</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtLealtad">Lealtad</string>
    <string name="txtNombreCompleto">Nombre completo</string>
    <string name="stock">Stock</string>
    <string name="status">Estatus</string>
    <string name="tall">Talla:</string>
    <string name="cancelar">Cancelar</string>
    <string name="menu_inicio_cliente">Inicio</string>
    <string name="menu_tienda">Tienda</string>
    <string name="menu_categoria">Categorías</string>
    <string name="menu_producto">Productos</string>
    <string name="menu_kits">KITS</string>
    <string name="menu_mis_kits">Mis kits</string>
    <string name="menu_mis_direcciones">Mis direcciones</string>
    <string name="menu_mis_pedidos">Mis pedidos</string>
    <string name="menu_mi_cuenta">Mi cuenta</string>
    <string name="menu_sobre_nosotros">Sobre nosotros</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_acerca_app">Acerca de la aplicacion</string>
    <string name="menu_politicas_privacidad">Políticas de privacidad</string>
    <string name="menu_ajustes">Ajustes y configuraciones</string>
    <string name="menu_salir">Cerrar sessión</string>
    <string name="txtordenPedido">Orden del pedido</string>
    <string name="fechaLimite">00/00/0000</string>
    <string name="txtcodigoInventario">Codigo del producto</string>
    <string name="txtModificarStock">Ingresar stock:</string>
    <string name="txtModificarStatusStock">Cambiar status :</string>
</resources>