<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_inicio_cliente" />
        <item
            android:id="@+id/nav_tienda"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_tienda" />

        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_categoria" />

        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_producto" />

        <item
            android:id="@+id/nav_kits"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_kits" />

        <item
            android:id="@+id/nav_mis_kits"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_mis_kits" />

        <item
            android:id="@+id/nav_mis_direcciones"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_mis_direcciones" />

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_mis_pedidos" />

        <item
            android:id="@+id/nav_mi_cuenta"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_mi_cuenta" />

    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sobre_nosotros"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_sobre_nosotros" />

        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_ayuda" />

        <item
            android:id="@+id/nav_acerca_app"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_acerca_app" />

        <item
            android:id="@+id/nav_politicas"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_politicas_privacidad" />

        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_ajustes" />
    </group>

</menu>