<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        android:src="@drawable/monio_corbatin_azul"
        android:contentDescription="@string/txtDescImg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtNombreProductoCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNombreProducto"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtModelo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tall" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCantidad"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSubtotal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>