<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtCodigoModificarStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtcodigoInventario"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtProductoModificarStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtNombreProducto"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txtModeloModificarStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtModelo"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txtTallaModificarStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/menu_tallas"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txtModificarStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtModificarStock"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:id="@+id/imgbtnMenosStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_remove_black_24dp"
                android:backgroundTint="@color/auxiliar"/>
            <TextView
                android:id="@+id/txtCantidadStock"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/stock"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/imgbtnMasStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                android:backgroundTint="@color/auxiliar"/>

        </LinearLayout>
        <TextView
            android:id="@+id/txtModificarStatusStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtModificarStatusStock"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">
            <AutoCompleteTextView
                android:id="@+id/spnStatusModificarStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btnAceptarCambioStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="20dp"
                android:text="@string/aceptar"
                android:textSize="20dp"/>
            <Button
                android:id="@+id/btnCancelarCambioStock"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/cancelar"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>