<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIconDetVentas"
            android:layout_width="69dp"
            android:layout_height="66dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/txtDescImg"
            android:src="@drawable/monio_corbatin_azul" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtNombreDetVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtNombreProducto"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtModeloDetVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtModelo" />

            <TextView
                android:id="@+id/txtTallaDetVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tall" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/txtItemCantiadDetVenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txtCantidad" />

                <TextView
                    android:id="@+id/txtSubtotalDetVenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/txtSubtotal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>