<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<!--android:layout_height="?android:attr/listPreferredItemHeight"-->

<LinearLayout
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtCodigoInnevtario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/txtcodigoInventario"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtProductoInnevtario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtNombreProducto"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEstatusInnevtario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/txtProductoInnevtario"
            android:maxLines="1"
            android:text="@string/status"
            android:textSize="16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtModeloInnevtario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/txtModelo"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txtStockInnevtario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-65dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@+id/txtModeloInnevtario"
            android:maxLines="1"
            android:text="@string/stock"
            android:textSize="16sp" />
    </RelativeLayout>
            <TextView
                android:id="@+id/txtTallaInnevtario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/menu_tallas"
                android:textColor="@color/black"
                android:textSize="16sp" />
</LinearLayout>
</LinearLayout>