<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtNumeroOrdenCamino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtordenPedido"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/txtTotaldelPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalAPagar"
            android:layout_toEndOf="@+id/txtNumeroOrdenCamino"
            android:layout_marginLeft="150dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtStatusEnCamino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEstatusEnCamino"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtFechaLlegadaCamino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaLimite"
            android:layout_toEndOf="@+id/txtStatusEnCamino"
            android:layout_marginLeft="15dp"
            android:textSize="18dp"/>

    </RelativeLayout>

</LinearLayout>